--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Timestamp microservice</title>
         <link href="/public/css/main.css" rel="stylesheet" type="text/css">
     </head>
     
@@ -12,8 +13,8 @@
             <li> If it does, it returns both the Unix timestamp and the natural language form of that date.</li>
             <li>If it does not contain a date or Unix timestamp, it returns null for those properties.</li></ul></h4>
         <h3><p>Example usage:</p>
-        <code>https://timestamp-breffmint.c9users.io/December%2015,%202015</code><br/>
-        <code>https://timestamp-breffmint.c9users.io/1450137600</code>
+        <code>https://radiant-gorge-9744.herokuapp.com/December%2015,%202015</code><br/>
+        <code>https://radiant-gorge-9744.herokuapp.com/1450137600</code>
         <p>Example output:</p>
         <code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code></h3>
         </div>
